--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,6 @@ h2 {
   letter-spacing: 0.02em;
   color: #2196f3;
   display: flex;
-  flex-grow: 1;
   justify-content: space-between;
   text-decoration: none;
   gap: 50px;
@@ -171,6 +170,8 @@ h2 {
   align-items: center;
   flex-direction: column;
   margin: 0 auto;
+  justify-content: center;
+  gap: 30px;
 }
 
 .button-hp {
@@ -316,16 +317,6 @@ address {
   padding: 1px 24px 20px 24px;
 }
 
-.header-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: row;
-  flex-wrap: wrap;
-  border-bottom: #ececec 1px solid;
-  height: 100px;
-}
-
 .work-wrapper {
   display: flex;
   align-items: center;
@@ -358,4 +349,17 @@ address {
   background: #f5f4fa;
   padding-top: 90px;
   padding-bottom: 20px;
+}
+
+header {
+  border-bottom: #ececec 1px solid;
+  height: 100px;
+}
+
+.header-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
