--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,12 @@
   margin: 0 auto;
 }
 
+section {
+  margin: 0 auto;
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 body {
   font-family: "Roboto", sans-serif;
 }
@@ -94,7 +100,7 @@ h2 {
   align-items: center;
   gap: 10px;
   margin-top: 100px;
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
 }
 
 .menu {
@@ -326,7 +332,7 @@ address {
   flex-direction: row;
   flex-wrap: wrap;
   flex-grow: 1;
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
 }
 
 .hp-wrapper {
@@ -335,7 +341,7 @@ address {
   justify-content: space-between;
   gap: 40px;
   margin-top: 100px;
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
 }
 
 .hp3-wrapper {
@@ -345,13 +351,13 @@ address {
   flex-direction: row;
   flex-wrap: wrap;
   flex-grow: 1;
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
 }
 
 .team {
   background: #f5f4fa;
-  padding-top: 90px;
-  padding-bottom: 20px;
+  /* padding-top: 90px;
+  padding-bottom: 20px; */
 }
 
 header {
